# nami

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _array_arithmetic_8h.html  _burger_8h.html  _cartesian_8h.html  _explicit_euler_8h.html  _fields_8h.html  _finite_volume_cell_8h.html  _finite_volume_grid_8h.html  _gridding_8h.html  _index_tuple_8h.html  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_23a7885b1b642a022d81c842af447703.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_89df40210733f52c97574eadbdfcffe8.html  dir_ccdc9aa95e4e3916bed85cce1512720f.html  files.html  index.html  modules.html  namespacenami.html  namespacenami_1_1_burger.html  namespacenami_1_1coordinates.html  namespacenami_1_1core.html  namespacenami_1_1core_1_1array.html  namespacenami_1_1core_1_1array_1_1internal.html  namespacenami_1_1core_1_1internal.html  namespacenami_1_1fv.html  namespacenami_1_1numerics.html  namespacenami_1_1timestepping.html  namespaces.html  numerics_8h.html  pages.html  searchdata-v1.js  structnami_1_1_burger_1_1_stack.html  (+14 more)
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml
all/: CMakeLists.txt
documentation/: CMakeLists.txt
include/nami/: Burger.h  Cartesian.h  DataContainer.h  Fields.h  FiniteVolumeCell.h  FiniteVolumeGrid.h  Gridding.h  VariableStack.h  VariableStackStruct.h  VariableStackTuple2.h  grid.h  numerics.h  state.h
include/nami/core/: ArrayArithmetic.h  IndexTuple.h
include/nami/timestepping/: ExplicitEuler.h
source/: dummy.cpp  grid.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: ArrayArithmetic.cpp  Burger.cpp  ExplicitEuler.cpp  Fields.cpp  FiniteVolumeCell.cpp  FiniteVolumeGrid.cpp  Goofy.h  Gridding.cpp  VariableStack.cpp  VariableStackStruct.cpp  VariableStackTuple2.cpp  burger.cpp
